--- a/manufacturing/templates/manufacturing/fabric_receipt.html
+++ b/manufacturing/templates/manufacturing/fabric_receipt.html
@@ -135,7 +135,9 @@
     }
 
     .badge-primary {
+        background-color: #007bff !important;
         color: #ffffff !important;
+        font-weight: 600 !important;
     }
 
     /* تصميم القائمة المربعة */
