--- a/inventory/templates/inventory/dashboard_new.html
+++ b/inventory/templates/inventory/dashboard_new.html
@@ -165,7 +165,7 @@
                                     <td>{{ product.code }}</td>
                                     <td>{{ product.category }}</td>
                                     <td>
-                                        <span class="badge badge-danger">{{ product.stock }}</span>
+                                        <span class="badge badge-danger">{{ product.current_stock_level|default:0 }}</span>
                                     </td>
                                     <td>{{ product.minimum_stock }}</td>
                                     <td>
